parser.c

//
// Created by Jose Juan Velasquez on 2/1/2024.
//

#include "semantics.c"
#include "ast-print.c"
#include <stdio.h>
#include <stdlib.h>
#include <limits.h>

//Global variables used in parser, scanner, and semantic checking files
int token;
int var_counter;
int temp_counter;
int currentAddress;
int numOfOperations;
int paramAddress;
int paramOperations = 0;
int label_num = 0;
char *functionName;
char* prevVar;
char* prevLexemeCopy;
char* functionNameCopy;
char* copyLexeme;
extern char* lexeme;
extern int bufferSize;
extern int chk_decl_flag;      /* set to 1 to do semantic checking */
extern int print_ast_flag;     /* set to 1 to print out the AST */
extern int gen_code_flag;      /* set to 1 to generate code */
bool local;
bool fn_call_check;
bool freePrevLexeme;
bool ASTFree;
bool freeFunctionName;
bool justSearch;
bool prevVarDecl;
bool freePrevLexemeCopy;
bool freeFunctionNameCopy;
bool freeCopyLexeme;
bool addGlobal;
bool returnExists;
SymbolTable *symbolTable;
AST *ast;

//Will go through the FUNC_CALL node arg_list, find its depth and compare with original function param count
void checkParamCount(ASTnode *node, char* funcName) {
    //Make a pointer to traverse the tree's EXPR_LIST nodes
    ASTnode *args = node;
    int paramCounter = 0;
    //Traverses all the parameters of the function call until it reaches the end
    while (args != NULL) {
        //Increment counter meaning we found another parameter
        paramCounter++;
        //Move to next parameter
        args = args->child1;
    }
    //Compare final count value for paramCounter and the actual number of parameters it should have
    if (!compareFunctionCallParameters(symbolTable->next->root, funcName, paramCounter)) {
        freeExitError(node->line_counter);
    }
}

//Will traverse the built AST and find the FUNC_CALL nodes
void checkFuncCallParamCount(ASTnode * node) {
    if (node == NULL) {
        return;
    }
    //Post order traversal
    checkFuncCallParamCount(node->child0);
    checkFuncCallParamCount(node->child1);
    checkFuncCallParamCount(node->child2);

    //If we find a FUNC_CALL node, count its parameters here
    if (node->ntype == FUNC_CALL) {
        checkParamCount(node->child0, node->callee);
    }
}

//Creates the ExprList root pointer
AST* createAST() {
    AST *root = (AST *) calloc(1, sizeof(AST));
    return root;
}

//Helper function that creates and initializes the ExprList nodes
ASTnode* createASTNode() {
    ASTnode *node = (ASTnode *) calloc(1, sizeof(ASTnode));
    node->ntype = INT_MIN;
    node->num = INT_MIN;
    node->parameters = INT_MIN;
    node->callee = NULL;
    node->st_ref = NULL;
    node->codeHead = NULL;
    node->codeTail = &node->codeHead;
    node->place = NULL;
    node->child0 = NULL;
    node->child1 = NULL;
    node->child2 = NULL;
    return node;
}

//Creates the three-address code node
ThreeAddressCodeNode* createThreeAddressCodeNode() {
    ThreeAddressCodeNode *node = (ThreeAddressCodeNode *) calloc(1, sizeof(ThreeAddressCodeNode));
    node->op = INT_MIN;
    node->src1 = NULL;
    node->src2 = NULL;
    node->dest = NULL;
    node->next = NULL;
    return node;
}

//This function has code and code styles shown in Prof. Saumya Debray's lecture slides
int parse() {
    //Create root for the local symbol table
    symbolTable = createSymbolTableRoot();

    //Hardcode bufferSize to match its equivalent used in semantics.c to avoid writing errors
    bufferSize = 7;
    //Add function "println" to the global symbol table
    populateSymbolTable(function, "println", true);

    //Update println's parameter count to 1
    updateSymbolTableParameters(symbolTable->next->root, "println", 1);

    //Gets the first token to start parsing
    token = get_token();
    prog();

    //If gen_code_flag is set, generate MIPS code hardcoded functions
    if (gen_code_flag == 1) {
        printHardcodedFunctions();
    }

    match(EOF);

    //Print the Symbol Table after populating it
    //printSymbolTable();

    //Free global symbol table
    freeSymbolTable();

    return 0;
}

//Verifies if current token matches the grammar
//This function has code and code styles shown in Prof. Saumya Debray's lecture slides
void match(Token expected) {
    if (token == expected) {
        //If we have an ID, start the symbol table checking
        if (token == ID && chk_decl_flag) {
            //Add to or check the semantic tables
            manageSymbolTable();
        } else {
            //Just get the token without semantic checking
            token = get_token();
        }
    } else {
        //Prints error message and exits with code 1
        freeExitError(-1);
    }
}

//<prog> ::= <type> ID <var_or_func> <prog> | E
void prog() {
    //Flag variables indicating specific semantic checks used within the semantics.c file
    local = false;
    fn_call_check = false;
    justSearch = false;

    //Flags used to avoid segfaults when freeing their corresponding variables
    ASTFree = false;
    prevVarDecl = false;
    freeFunctionName = false;
    freePrevLexemeCopy = false;
    freeFunctionNameCopy = false;

    //Variables used for MIPS code generation
    temp_counter = 0;
    currentAddress = -4;
    numOfOperations = -4;
    paramAddress = 8;

    //Flag used know if we need to print the global variables in code generation
    addGlobal = true;
    returnExists = false;

    //<type> ID <var_or_func> <prog> | E
    if (token == kwINT) {
        //<type>
        match(kwINT);
        //Avoids errors
        if (token == ID) {
            //Save function ID to compare parameters later on
            functionName = (char *) calloc(bufferSize + 1, sizeof(char));
            functionName = strcpy(functionName, lexeme);
            freeFunctionName = true;

            //Save current function ID here as well to be used in code generation
            functionNameCopy = (char *) calloc(bufferSize + 1, sizeof(char));
            functionNameCopy = strcpy(functionNameCopy, lexeme);
            freeFunctionNameCopy = true;
        }
        //ID
        match(ID);
        //<var_or_func>
        var_or_func();
        //<prog>
        prog();
    } else {
        //E
        return;
    }
}

//<var_or_func> ::= SEMI | <decl_or_func>
void var_or_func() {
    //Single variable declaration
    if (token == SEMI) {
        //If flag is active, generate code for a single global variable
        if (gen_code_flag) {
            fprintf(stdout,".data\n_%s: .space 4\n",functionNameCopy);
        }

        //Confirming we're done updating the function's parameter count
        free(functionName);
        freeFunctionName = false;

        //Confirming we're done updating the function's MIPS equivalent
        free(functionNameCopy);
        freeFunctionNameCopy = false;

        //SEMI
        match(SEMI);
    } else if (token == COMMA || token == LPAREN) {
        //Create the root pointer of the AST
        ast = createAST();
        //Indicates to free the tree in case we exit due to an error
        ASTFree = true;
        //<decl_or_func> and creates the AST
        ast->root = decl_or_func();

        //Print the Symbol Table after populating it
        //printSymbolTable();

        //Code generation if the AST was populated
        if (gen_code_flag == 1 && ast->root != NULL) {
            mipsDriver();
        }

        //Confirming we're done using the function's name MIPS equivalent
        free(functionNameCopy);
        freeFunctionNameCopy = false;

        //Free the AST
        freeAST();

        //Free the local symbol table
        freeLocalSymbolTable();

        //Can continue as normal since no error occurred here
        ASTFree = false;
    } else {
        //Syntax error, print message
        match(SEMI);
    }
}

//<decl_or_func> ::= COMMA <id_list> SEMI | LPAREN <opt_formals> RPAREN LBRACE <opt_var_decls> <opt_stmt_list> RBRACE
ASTnode* decl_or_func() {
    if (token == COMMA) {
        //If flag is set, generate global variable list
        if (gen_code_flag) {
            printGlobalVariableList();
        }
        //Confirms we are not in the local scope when freeing
        local = false;
        //COMMA
        match(COMMA);
        //<id_list>
        id_list();
        //SEMI
        match(SEMI);
    } else if (token == LPAREN) {
        //Used in id_list(), it means we are now dealing with local variables for code generation
        addGlobal = false;

        //Create the node and make the root pointer point to it
        ASTnode *astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();
        //Specify type of node
        astNode->ntype = FUNC_DEF;
        //Initialize/Reset parameter counter
        var_counter = 0;
        //Recognizes we're dealing with a local scope
        local = true;
        //Return a pointer to the name from the local symbol table
        astNode->st_ref = getIDFromSymbolTable(symbolTable->next->root, functionName);
        //LPAREN
        match(LPAREN);
        //<opt_formals>
        astNode->child1 = opt_formals();
        //Up to this point, var_counter will have the number of parameters the function has
        astNode->parameters = var_counter;
        //RPAREN
        match(RPAREN);
        //Change the parameter field for the function
        updateSymbolTableParameters(symbolTable->next->root, functionName, var_counter);
        //Confirming we're done updating the function's parameter count
        free(functionName);
        freeFunctionName = false;
        //Reset counter for later use
        var_counter = 0;
        //LBRACE
        match(LBRACE);
        //<opt_var_decls>
        opt_var_decls();
        //<opt_stmt_list>
        astNode->child0 = opt_stmt_list();
        //RBRACE
        match(RBRACE);

        //If chk_decl_flag is on, check the parameter count for each function call
        if (chk_decl_flag) {
            checkFuncCallParamCount(astNode);
        }

        //Prints the AST if flag is set
        if (print_ast_flag == 1) {
            print_ast(astNode);
        }

        //If true, we can free the copyLexeme used in arith_exp3()
        if (freeCopyLexeme) {
            freeCopyLexeme = false;
            free(copyLexeme);
        }
        //Recognizes we're out of the local scope
        local = false;
        return astNode;
    }
    return NULL;
}

//<id_list> ::= ID | ID COMMA <id_list>
void id_list() {
    //Store a copy of the current lexeme to update its address in the local symbol table
    freePrevLexemeCopy = true;
    prevLexemeCopy = (char*)calloc(bufferSize+1,sizeof(char));
    prevLexemeCopy = strcpy(prevLexemeCopy,lexeme);
    //ID
    match(ID);

    //Generate code for a global variable or update addresses for local variables
    if(gen_code_flag == 1) {
        printGlobalVariableList();
    }

    //frees the copy after we're done comparing
    free(prevLexemeCopy);
    freePrevLexemeCopy = false;
    if (token == COMMA) {
        //COMMA <id_list>
        match(COMMA);
        id_list();
    }
}

//<opt_formals> ::= <formals> | E
ASTnode *opt_formals() {
    if (token == kwINT) {
        //<formals>
        return formals();
    } else {
        //E
        return NULL;
    }
}

//<formals> ::= <type> ID COMMA <formals> | <type> ID
ASTnode* formals() {
    //<type>
    match(kwINT);
    prevVarDecl = true;
    //Create copy of current lexeme ID to use later
    prevVar = (char *) calloc(bufferSize + 1, sizeof(char));
    prevVar = strcpy(prevVar, lexeme);

    //ID
    match(ID);
    //Increment counter
    var_counter++;
    //Create node for formal parameter
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Find the name in the symbol table
    astNode->st_ref = getIDFromSymbolTable(symbolTable->root, prevVar);
    if (astNode->st_ref == NULL) {
        //If not in local table, search global table
        astNode->st_ref = getIDFromSymbolTable(symbolTable->next->root, prevVar);
    }
    //We're done with prevVar, free it
    free(prevVar);
    prevVarDecl = false;
    if (token == COMMA) {
        //COMMA <formals>
        match(COMMA);
        astNode->child0 = formals();
    }
    return astNode;
}

//<opt_var_decls> ::= <var_decl> <opt_var_decls> | E
void opt_var_decls() {
    if (token == kwINT) {
        //<var_decl> <opt_var_decls>
        var_decl();
        opt_var_decls();
    } else {
        //E
        return;
    }
}

//<var_decl> := <type> <id_list> SEMI
void var_decl() {
    //<type>
    match(kwINT);
    //<id_list>
    id_list();
    //SEMI
    match(SEMI);
}

//<opt_stmt_list> ::= <stmt> <opt_stmt_list> | E
ASTnode* opt_stmt_list() {
    //Lets the function know if it should continue or return
    if (token == ID || token == kwWHILE ||
        token == kwIF || token == kwRETURN ||
        token == LBRACE || token == SEMI) {
        //Create node and assign its type
        ASTnode *astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();
        astNode->ntype = STMT_LIST;

        //This flag will make sure that from here on out,
        // we should only focus on checking, not declaring variables
        justSearch = true;
        //<stmt>
        astNode->child0 = stmt();
        //<opt_stmt_list>
        astNode->child1 = opt_stmt_list();
        return astNode;
    } else {
        //At this point, we're done for just checking variables
        justSearch = false;
        //E
        return NULL;
    }
}

//<stmt> ::= <while_stmt>
//           | <if_stmt>
//           | ID <assg_or_fn_call>
//           | <return_stmt>
//           | LBRACE <opt_stmt_list> RBRACE
//           | SEMI
ASTnode* stmt() {
    ASTnode *astNode;
    //ID <assg_or_fn_call>
    if (token == ID) {
        //Save ID to compare parameters later on
        functionName = (char *) calloc(bufferSize + 1, sizeof(char));
        functionName = strcpy(functionName, lexeme);
        freeFunctionName = true;

        //ID
        match(ID);
        //astNode will be of type ASSG or FUNC_CALL
        astNode = assg_or_fn_call();

        //Confirming we're done using the ID, free it
        free(functionName);
        freeFunctionName = false;
    }
        //<while_stmt>
    else if (token == kwWHILE) {
        //astNode will be of type WHILE
        astNode = while_stmt();
    }
        //<if_stmt>
    else if (token == kwIF) {
        //astNode will be of type IF
        astNode = if_stmt();
    }
        //<return_stmt>
    else if (token == kwRETURN) {
        //astNode will be of type RETURN
        astNode = return_stmt();
    }
        //LBRACE <opt_stmt_list> RBRACE
    else if (token == LBRACE) {
        match(LBRACE);
        astNode = opt_stmt_list();
        match(RBRACE);
    } else {
        //SEMI
        match(SEMI);
        astNode = NULL;
    }
    return astNode;
}

//<while_stmt> ::= kwWHILE LPAREN <bool_exp> RPAREN <stmt>
ASTnode* while_stmt() {
    //Create node and assign its type
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Declare the AST node's type
    astNode->ntype = WHILE;
    //kwWHILE
    match(kwWHILE);
    //LPAREN
    match(LPAREN);
    //<bool_exp>
    astNode->child0 = bool_exp();
    //RPAREN
    match(RPAREN);
    //<stmt>
    astNode->child1 = stmt();
    return astNode;
}

//<if_stmt> ::= kwIF LPAREN <bool_exp> RPAREN <stmt>
//            | kwIF LPAREN <bool_exp> RPAREN <stmt> kwELSE <stmt>
ASTnode* if_stmt() {
    //Create node and assign its type
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Declare the AST node type
    astNode->ntype = IF;
    //kwIF
    match(kwIF);
    //LPAREN
    match(LPAREN);
    //<bool_exp>
    astNode->child0 = bool_exp();
    //RPAREN
    match(RPAREN);
    //<stmt>
    astNode->child1 = stmt();
    //kwELSE
    if (token == kwELSE) {
        match(kwELSE);
        //<stmt>
        astNode->child2 = stmt();
    }
    return astNode;
}

//<return_stmt> ::= kwRETURN SEMI | kwRETURN <arith_exp> SEMI
ASTnode* return_stmt() {
    //Create node and assign its type
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Declare the AST node type
    astNode->ntype = RETURN;
    //kwRETURN
    match(kwRETURN);
    if (token == SEMI) {
        //SEMI
        match(SEMI);
    } else {
        //<arith_exp>
        astNode->child0 = arith_exp();
        //SEMI
        match(SEMI);
    }
    return astNode;
}

//<assg_or_fn_call> ::= <assg_stmt> | <fn_call> SEMI
ASTnode* assg_or_fn_call() {
    ASTnode *astNode = NULL;
    //<assg_stmt>
    if (token == opASSG) {
        astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();

        //Create left hand side node
        astNode->child0 = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->child0->line_counter = getLines();

        //Find the name in the symbol table
        astNode->child0->st_ref = getIDFromSymbolTable(symbolTable->root, functionName);
        if (astNode->child0->st_ref == NULL) {
            //If not in local table, search global table
            astNode->child0->st_ref = getIDFromSymbolTable(symbolTable->next->root, functionName);
        }
        //Assign node types for both the left hand side and current node
        astNode->ntype = ASSG;
        astNode->child0->ntype = IDENTIFIER;

        //We can continue to manage symbol table as normal
        fn_call_check = false;
        //<assg_stmt>
        astNode->child1 = assg_stmt();
    }
        //<fn_call> SEMI
    else if (token == LPAREN) {
        //Recognizes we should only search the global scope
        fn_call_check = true;
        //<fn_call>
        astNode = fn_call(functionName);

        //We can continue to manage symbol table as normal
        fn_call_check = false;
        //SEMI
        match(SEMI);
    } else {
        //Syntax error if it reached here
        match(ID);
    }
    return astNode;
}

//<assg_stmt> ::= opASSG <arith_exp> SEMI
ASTnode* assg_stmt() {
    ASTnode *astNode;
    //opASSG
    match(opASSG);
    //<arith_exp>
    astNode = arith_exp();
    //SEMI
    match(SEMI);
    return astNode;
}

//<fn_call> ::= LPAREN <opt_expr_list> RPAREN
ASTnode* fn_call(char* currentLexeme) {
    //Create and fill the FUNC_CALL AST node
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Declare the AST node type
    astNode->ntype = FUNC_CALL;
    astNode->callee = getIDFromSymbolTable(symbolTable->next->root, currentLexeme);
    //LPAREN
    match(LPAREN);
    //<opt_expr_list>
    astNode->child0 = opt_expr_list();
    //RPAREN
    match(RPAREN);
    return astNode;
}

//<opt_expr_list> ::= E | <expr_list>
ASTnode* opt_expr_list() {
    //This indicates that the beginning of a param could be an ID, INTCON, UMINUS or LPAREN
    if (token == ID || token == INTCON || token == opSUB || token == LPAREN) {
        //<expr_list>
        return expr_list();
    } else {
        //E
        return NULL;
    }
}

//<expr_list> ::= <arith_exp> COMMA <expr_list> | <arith_exp>
ASTnode* expr_list() {
    //Create node for arg_list
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Declare the AST node type
    astNode->ntype = EXPR_LIST;
    //<arith_exp>
    astNode->child0 = arith_exp();
    //COMMA <expr_list>
    if (token == COMMA) {
        match(COMMA);
        astNode->child1 = expr_list();
    }
    return astNode;
}

//<bool_exp> ::= <bool_exp1> <opt_or>
ASTnode* bool_exp() {
    ASTnode *left;
    left = bool_exp1();
    return opt_or(left);
}

//<opt_or> ::= || <bool_exp1> <opt_or> | E
ASTnode* opt_or(ASTnode* left) {
    ASTnode *right, *ast0;
    if (token == opOR) {
        match(opOR);
        right = bool_exp1();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(OR, left, right);
        //Keep connecting node into ast0
        return opt_or(ast0);
    } else {
        //E
        return left;
    }
}

//<bool_exp1> ::= <bool_exp2> <opt_and>
ASTnode* bool_exp1() {
    ASTnode *left = bool_exp2();
    return opt_and(left);
}

//<opt_and> ::= && <bool_exp2> <opt_and> | E
ASTnode* opt_and(ASTnode* left) {
    ASTnode *right, *ast0;
    if (token == opAND) {
        match(opAND);
        right = bool_exp2();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(AND, left, right);
        //Keep connecting node into ast0
        return opt_and(ast0);
    } else {
        //E
        return left;
    }
}

//<bool_exp2> ::= <arith_expr> <relop> <arith_exp>
ASTnode* bool_exp2() {
    ASTnode *astNode = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    astNode->line_counter = getLines();
    //Create the parent node being the relop, and its children being the arithmetic expressions
    astNode->child0 = arith_exp();
    astNode->ntype = relop();
    astNode->child1 = arith_exp();
    return astNode;
}

//<arith_exp> ::= <arith_exp1> <opt_add_sub>
ASTnode* arith_exp() {
    ASTnode *left = arith_exp1();
    return opt_add_sub(left);
}

//<opt_add_sub> ::= opADD <arith_exp1> <opt_add_sub> | opSUB <arith_exp1> <opt_add_sub> | E
ASTnode* opt_add_sub(ASTnode* left) {
    ASTnode *right, *ast0;
    //opADD <arith_exp1> <opt_add_sub>
    if (token == opADD) {
        match(opADD);
        right = arith_exp1();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(ADD, left, right);
        //Keep connecting node into ast0
        return opt_add_sub(ast0);
    }
        //opSUB <arith_exp1> <opt_add_sub>
    else if (token == opSUB) {
        match(opSUB);
        right = arith_exp1();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(SUB, left, right);
        //Keep connecting node into ast0
        return opt_add_sub(ast0);
    } else {
        //E
        return left;
    }
}

//<arith_exp1> ::= <arith_exp2> <opt_mul_div>
ASTnode* arith_exp1() {
    ASTnode *left = arith_exp2();
    return opt_mul_div(left);
}

//<opt_mul_div> ::= opMUL <arith_exp2> <opt_mul_div> | opDIV <arith_exp2> <opt_mul_div> | E
ASTnode* opt_mul_div(ASTnode* left) {
    ASTnode *right, *ast0;
    //opMUL <arith_exp2> <opt_mul_div>
    if (token == opMUL) {
        match(opMUL);
        right = arith_exp2();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(MUL, left, right);
        //Keep connecting node into ast0
        return opt_mul_div(ast0);
    }
        //opDIV <arith_exp2> <opt_mul_div>
    else if (token == opDIV) {
        match(opDIV);
        right = arith_exp2();
        //Connect the given left and right children into a parent node, ast0
        ast0 = mk_node(DIV, left, right);
        //Keep connecting node into ast0
        return opt_mul_div(ast0);
    } else {
        //E
        return left;
    }
}

//<arith_exp2> ::= opSUB <arith_exp2> | <arith_exp3>
ASTnode* arith_exp2() {
    ASTnode *astNode;
    //opSUB <arith_exp2>
    if (token == opSUB) {
        match(opSUB);
        astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();

        //Declare the node type and recurse until we find the ID
        astNode->ntype = UMINUS;
        astNode->child0 = arith_exp2();
        return astNode;
    } else {
        //<arith_exp3>
        return arith_exp3();
    }
}

//<arith_exp3> ::= ID <opt_func_call> | INTCON | LPAREN <arith_exp> RPAREN
ASTnode* arith_exp3() {
    ASTnode *astNode = NULL;
    //ID <opt_func_call>
    if (token == ID) {
        //Enters first condition if we already allocated memory for the place saver for the ID
        //Enters second condition if it is the first time we will allocate memory to store a copy of current ID
        if (freeCopyLexeme) {
            copyLexeme = (char *) realloc(copyLexeme, bufferSize + 1);
            copyLexeme = strcpy(copyLexeme, lexeme);
        } else {
            copyLexeme = (char *) calloc(bufferSize + 1, sizeof(char));
            copyLexeme = strcpy(copyLexeme, lexeme);
            freeCopyLexeme = true;
        }

        //ID
        match(ID);

        //From here it will return a node if corresponding to IDENTIFIER or FUNC_CALL
        astNode = opt_func_call(copyLexeme);
    }
        //INTCON
    else if (token == INTCON) {
        astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();

        //Declare node type and store the INTCON in the AST node
        astNode->ntype = INTCONST;
        astNode->num = atoi(lexeme);
        match(INTCON);
    }
        //LPAREN <arith_exp> RPAREN
    else if (token == LPAREN) {
        match(LPAREN);
        astNode = arith_exp();
        match(RPAREN);
    } else {
        //Syntax error if it gets here
        match(ID);
    }
    return astNode;
}

//<opt_func_call> ::= <fn_call>
ASTnode* opt_func_call(char* currentLexeme) {
    //<fn_call>
    if (token == LPAREN) {
        ASTnode *astNode;
        //Let fn_call create the node
        astNode = fn_call(currentLexeme);
        return astNode;
    } else {
        //ID
        ASTnode *astNode = createASTNode();
        //Indicate within the AST node where it is located in the stdin
        astNode->line_counter = getLines();
        astNode->ntype = IDENTIFIER;
        //Get the ID reference from the local symbol table
        astNode->st_ref = getIDFromSymbolTable(symbolTable->root, currentLexeme);
        if (astNode->st_ref == NULL) {
            //If not in the local symbol table, check the global symbol table
            astNode->st_ref = getIDFromSymbolTable(symbolTable->next->root, currentLexeme);
        }
        return astNode;
    }
}

//Makes an AST node connecting the left child and the right child to a parent node, which will return
ASTnode* mk_node(NodeType ntype, ASTnode *left, ASTnode *right) {
    ASTnode *node = createASTNode();
    //Indicate within the AST node where it is located in the stdin
    node->line_counter = getLines();
    node->ntype = ntype;
    node->child0 = left;
    node->child1 = right;
    return node;
}

//<relop> ::= opEQ | opNE | opLE | opLT | opGE | opGT
NodeType relop() {
    //opEQ
    if (token == opEQ) {
        match(opEQ);
        return EQ;
    }
    //opNE
    if (token == opNE) {
        match(opNE);
        return NE;
    }
    //opLE
    if (token == opLE) {
        match(opLE);
        return LE;
    }
    //opLT
    if (token == opLT) {
        match(opLT);
        return LT;
    }
    //opGE
    if (token == opGE) {
        match(opGE);
        return GE;
    } else {
        //opGT
        match(opGT);
        return GT;
    }
}

/////////////////////////////////////************************* MIPS GENERATION ************************/////////////////////////////////////


//Initializes three address code generation and MIPS code printing
void mipsDriver() {
    //Initialize/reset temp variable counter for naming
    temp_counter = 0;
    //Populates the three-address code structure
    traverseAST(ast->root);

    //printThreeAddressCodeNode(ast->root->codeHead,0);
    //printSymbolTable();

    //Function will print in stdout MIPS code after generating the three address instructions
    generateMIPSCode(ast->root->codeHead,functionNameCopy);

    //If flag is false, it means func_def never had a return, so hardcode one in
    if(!returnExists){
        fprintf(stdout,
                "li $v0, 0\n"
                "la $sp, 0($fp)\n"
                "lw $ra, 0($sp)\n"
                "lw $fp, 4($sp)\n"
                "la $sp, 8($sp)\n"
                "jr $ra\n");
    }
}

//Creates and populates a new ThreeAddressCodeNode instruction
ThreeAddressCodeNode* newinstr(InstrType opType, SymbolTableNode *src1, SymbolTableNode * src2, SymbolTableNode *dest) {
    ThreeAddressCodeNode *instr = createThreeAddressCodeNode();
    instr->op = opType;
    instr->src1 = src1;
    instr->src2 = src2;
    instr->dest = dest;
    return instr;
}

//Creates temp variable and stores it in the local symbol table
SymbolTableNode * newtemp(TYPE type) {
    //Creates temp variable
    char _temp[10];
    //Adds the temp concatenated with the number of current temps to the stream
    sprintf(_temp, "$temp%d", temp_counter);

    //Adds the newly made temp variable to the local symbol table
    populateSymbolTable(type, _temp, false);
    temp_counter++;

    //Get the node of the new temp variable to update its address
    SymbolTableNode *newNode = getScopeNode(symbolTable->root, _temp);
    newNode->address = currentAddress;
    //Update counters accordingly
    currentAddress -= 4;
    numOfOperations -= 4;

    //Return the node of the temp variable
    return newNode;
}

//Creates the Labels used in code generation
ThreeAddressCodeNode *newlabel() {
    //Creates temp variable
    char labelNum[10];
    //Adds the temp concatenated with the number of current temps to the stream
    sprintf(labelNum, "L%d", label_num);

    //Adds the new label into the symbol table
    populateSymbolTable(variable, labelNum, false);
    label_num++;

    //Pull the label from the symbol table, create the new instruction and return it
    SymbolTableNode *labelNumber = getScopeNode(symbolTable->root, labelNum);
    ThreeAddressCodeNode *label = newinstr(LABEL, labelNumber, NULL, NULL);
    return label;
}

//Traverses the AST and creates the three-address code instructions as we traverse
void traverseAST(ASTnode *astNode) {
    //Reached the end of the AST
    if (astNode == NULL) {
        return;
    }
    //Post-Order Traversal
    traverseAST(astNode->child0);
    traverseAST(astNode->child1);
    traverseAST(astNode->child2);

    //Will make three-address instructions depending on the type of operator we're dealing with
    codeGen_stmt(astNode);
}

//Generates three-address code instructions for the statements
void codeGen_stmt(ASTnode *node) {
    //Pointer used to get the func_def formal parameters
    ASTnode *ptr;

    //Labels used for three-address code
    ThreeAddressCodeNode *LThen;
    ThreeAddressCodeNode *LElse;
    ThreeAddressCodeNode *LAfter;
    ThreeAddressCodeNode *LTop;
    ThreeAddressCodeNode *LBody;

    //Labels stored within the symbol table
    SymbolTableNode *LThenLabel;
    SymbolTableNode *LElseLabel;
    SymbolTableNode *LAfterLabel;
    SymbolTableNode *LTopLabel;
    SymbolTableNode *LBodyLabel;

    switch (node->ntype) {
        case ASSG:
            if (node->child0 != NULL && node->child1 != NULL) {
                //Generate three-address code instructions for the LHS
                codeGen_expr(node->child0);

                //Generate three-address code instructions for the RHS
                codeGen_expr(node->child1);

                //Enters first condition if both children are variables
                //Enters second condition if LHS is a variable and RHS is an INTCONST
                if (node->child0->codeHead == NULL && node->child1->codeHead == NULL) {
                    //parent.head = newInstr()
                    node->codeHead = newinstr(ASSGN, node->child1->place, NULL, node->child0->place);
                } else {
                    //parentNode.head = child1.head
                    node->codeHead = node->child1->codeHead;

                    //child1.tail.next = newInstr()
                    (*node->child1->codeTail)->next = newinstr(ASSGN, node->child1->place, NULL, node->child0->place);

                    //parentNode.tail = child1.codeTail.next
                    node->codeTail = &((*node->child1->codeTail)->next);
                }
            }
            break;

        case STMT_LIST:
            //Enters first condition if both children are not NULL
            //Enters second condition if RHS is NULL
            if (node->child0 != NULL && node->child1 != NULL) {
                //parent.head = LHS.head
                node->codeHead = node->child0->codeHead;
                //LHS.tail.next = RHS.head
                (*node->child0->codeTail)->next = node->child1->codeHead;

                //parent.tail = RHS.tail
                node->codeTail = node->child1->codeTail;
            } else if (node->child0 != NULL) {
                //parent.head = LHS.head
                node->codeHead = node->child0->codeHead;
                //parent.head = LHS.Tail
                node->codeTail = node->child0->codeTail;
            }
            break;
